Fixed issue when calendar covers navbar
width >1200 && height < 800 use to make the calendar cover the navbar

--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -46,9 +46,11 @@
     .month-calendar
       width: 900px
       margin-right: 3px
-
+      max-height: 85vh
+      overflow-y: auto
       .date
         height: 100px
+
 
 @media (max-width: 1200px) and (min-width: 691px)
   .calendar
