--- a/_sass/navbar.sass
+++ b/_sass/navbar.sass
@@ -32,7 +32,7 @@
 
     a:nth-child(3)
       display: block
-      color: black
+      color: white
       font-size: 25px
       width: 100px
       float: left
